basic style added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,25 @@
          </ul>
          <ul id="doing">
              <h2>Doing</h2>
+             <li class="to-do">
+                 <h3>Finish the Paper</h3>
+                 <div class="note">For CI8133</div>
+             </li>             
+             <li class="to-do">
+                 <h3>Finish the Paper</h3>
+                 <div class="note">For CI8133</div>
+             </li>
          </ul>
          <ul id="done">             
              <h2>Done</h2>
+             <li class="to-do">
+                 <h3>Finish the Paper</h3>
+                 <div class="note">For CI8133</div>
+             </li>             
+             <li class="to-do">
+                 <h3>Finish the Paper</h3>
+                 <div class="note">For CI8133</div>
+             </li>
          </ul>
       </div> 
   </body>
