--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
     <link rel="stylesheet" href="main.css" type="text/css" />
     <script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script src="http://documentcloud.github.com/underscore/underscore.js"></script>
     <script src="http://documentcloud.github.com/backbone/backbone.js"></script>
     <script type='text/javascript' src='main.js'></script>
