added backbone for todo-list

--- a/index.html
+++ b/index.html
@@ -12,26 +12,10 @@
   </head>
   <body>
      <div id="tdddApp">
-         <ul id="to-do">
+         <ul id="todo-list">
              <h2>Todo</h2>
-             <li class="to-do">
-                 <h3>Finish the Paper</h3>
-                 <div class="note">For CI8133</div>
-             </li>
-             <li class="to-do">
-                 <h3>Finish the Paper</h3>
-                 <div class="note">For CI8133</div>
-             </li>
-             <li class="to-do">
-                 <h3>Finish the Paper</h3>
-                 <div class="note">For CI8133</div>
-             </li>             
-             <li class="to-do">
-                 <h3>Finish the Paper</h3>
-                 <div class="note">For CI8133</div>
-             </li>
          </ul>
-         <ul id="doing">
+         <ul id="doing-list">
              <h2>Doing</h2>
              <li class="to-do">
                  <h3>Finish the Paper</h3>
@@ -42,7 +26,7 @@
                  <div class="note">For CI8133</div>
              </li>
          </ul>
-         <ul id="done">             
+         <ul id="done-list">             
              <h2>Done</h2>
              <li class="to-do">
                  <h3>Finish the Paper</h3>
@@ -57,7 +41,7 @@
   </body>
       <script type="text/template" id="todo-template">
           <h3><%= title %></h3>
-          <div class="note"><%= note %></div>
+          <div class="note">note</div>
       </script>
       <script type="text/template" id="content-template">
 
