more css, border image

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
-    <script src="underscore-min.js"></script>
-    <script src="backbone-min.js"></script>
-    <script type='text/javascript' src='main.js'></script>
+    <link href='http://fonts.googleapis.com/css?family=Delius+Unicase' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
+
+    <script src="js/underscore-min.js"></script>
+    <script src="js/backbone-min.js"></script>
+    <script type='text/javascript' src='js/main.js'></script>
   </head>
   <body>
      <div id="tdddApp">
@@ -70,6 +73,204 @@
             </ul>
         </div>                      <h3>Finish the Paper</h3>
              </li>
+                      <li class="sticky blue">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Finish paper for CI8133</h3>
+          <div class="note"></div>
+        </li><li class="sticky yellow">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start working on Indelearn</h3>
+          <div class="note"></div>
+        </li><li class="sticky green">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start planning for springbreak</h3>
+          <div class="note"></div>
+        </li><li class="sticky pink">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Creating a tddd app</h3>
+          <div class="note"></div>
+        </li><li class="sticky grey">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Get an Intern</h3>
+          <div class="note"></div>
+        </li>
+                 <li class="sticky blue">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Finish paper for CI8133</h3>
+          <div class="note"></div>
+        </li><li class="sticky yellow">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start working on Indelearn</h3>
+          <div class="note"></div>
+        </li><li class="sticky green">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start planning for springbreak</h3>
+          <div class="note"></div>
+        </li><li class="sticky pink">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Creating a tddd app</h3>
+          <div class="note"></div>
+        </li><li class="sticky grey">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Get an Intern</h3>
+          <div class="note"></div>
+        </li>
+                 <li class="sticky blue">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Finish paper for CI8133</h3>
+          <div class="note"></div>
+        </li><li class="sticky yellow">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start working on Indelearn</h3>
+          <div class="note"></div>
+        </li><li class="sticky green">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Start planning for springbreak</h3>
+          <div class="note"></div>
+        </li><li class="sticky pink">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Creating a tddd app</h3>
+          <div class="note"></div>
+        </li><li class="sticky grey">
+         <div class="toolbar handle">
+            <ul class="color-picker">
+             <li class="color-yellow"></li>
+             <li class="color-blue"></li>
+             <li class="color-green"></li>
+             <li class="color-pink"></li>
+             <li class="color-purple"></li>
+             <li class="color-grey"></li>            
+            </ul>
+        </div>            
+        <h3>Get an Intern</h3>
+          <div class="note"></div>
+        </li>
          </ul>
       </div> 
   </body>
