got localstorage working

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
 
     <script src="js/underscore-min.js"></script>
-    <script src="js/backbone-min.js"></script>
+    <script src="js/backbone.js"></script>
+    <script src="js/backbone-localstorage.js"></script>
     <script type='text/javascript' src='js/main.js'></script>
   </head>
   <body>
