switched back using the whole sticky as the handle to move

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div> 
   </body>
       <script type="text/template" id="sticky-template">
-         <div class="toolbar handle">
+         <div class="toolbar">
             <ul class="color-picker">
              <li class="color-yellow"></li>
              <li class="color-blue"></li>
