--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <script type="text/template" id="sticky-template">
          <div class="toolbar">
             <ul class="color-picker">
-             <li class="color-yellow"></li>
-             <li class="color-blue"></li>
-             <li class="color-green"></li>
-             <li class="color-pink"></li>
-             <li class="color-purple"></li>
-             <li class="color-grey"></li>            
+             <li class="yellow"></li>
+             <li class="blue"></li>
+             <li class="green"></li>
+             <li class="pink"></li>
+             <li class="purple"></li>
+             <li class="grey"></li>            
             </ul>
         </div>            
         <h3><%= title %></h3>
