added delete sticky function

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
              <li class="purple"></li>
              <li class="grey"></li>            
             </ul>
+            <span class="close"><a href="#">&#010060</a></span>
         </div>            
         <h3><%= title %></h3>
           <div class="note"></div>
