refractor some code

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
   <body>
      <div id="tdddApp">
          <ul id="todo-list">
-             <h2>Todo</h2>
+             <h2 class="todo">Todo</h2>
          </ul>
          <ul id="doing-list">
-             <h2>Doing</h2>
+             <h2 class="doing">Doing</h2>
          </ul>
          <ul id="done-list">             
-             <h2>Done</h2>
+             <h2 class="done">Done</h2>
         </ul>
       </div> 
   </body>
