--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
              <h2 class="done">Done</h2>
         </ul>
       </div> 
+      <div class="info">Created by <a href="http://github.com/randomor/tododoingdone">randomor</a></div>
   </body>
       <script type="text/template" id="sticky-template">
          <div class="toolbar">
