changed jquery and jquery ui source

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
       <title>To-do Doing Done</title>
 	<meta charset="utf-8">
     <link rel="stylesheet" href="main.css" type="text/css" />
-    <script src="http://cdn.jquerytools.org/1.2.5/full/jquery.tools.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.js"></script>
     <link href='http://fonts.googleapis.com/css?family=Handlee' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Delius+Unicase' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Permanent+Marker' rel='stylesheet' type='text/css'>
